fix table td vertical align (#98)
Former-commit-id: 241a18a406ba3f00c59fda31a60aefcdf776d13e

--- a/src/less/community/devcon2019.less
+++ b/src/less/community/devcon2019.less
@@ -248,6 +248,7 @@
 
     td {
      padding: 0.2rem;
+     vertical-align: top;
     }
 
     tr:nth-child(1),
